[gd_scene load_steps=9 format=2]

[ext_resource path="res://Avventura Testuale/gfx/joystix monospace.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Avventura Testuale/gfx/blackboard.jpg" type="Texture" id=2]
[ext_resource path="res://Avventura Testuale/Il MHANZ Definito.gd" type="Script" id=3]
[ext_resource path="res://Avventura Testuale/gfx/blue_button11.png" type="Texture" id=5]
[ext_resource path="res://Avventura Testuale/gfx/blue_button12.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 24.0
margin_right = -24.0
margin_bottom = -24.0
alignment = 2

[node name="DisplayText" type="Label" parent="VBoxContainer"]
margin_top = 69.0
margin_right = 976.0
margin_bottom = 469.0
rect_min_size = Vector2( 0, 400 )
custom_fonts/font = SubResource( 1 )
text = "MHANZ
"
autowrap = true
clip_text = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 473.0
margin_right = 976.0
margin_bottom = 552.0
custom_constants/separation = 15

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_right = 767.0
margin_bottom = 79.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 782.0
margin_right = 861.0
margin_bottom = 79.0
rect_min_size = Vector2( 79, 79 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 876.0
margin_top = 3.0
margin_right = 976.0
margin_bottom = 75.0
custom_fonts/font = SubResource( 3 )
text = "ok"

[connection signal="text_entered" from="VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
